@@ -24,6 +24,18 @@ TargetPath=
 ; Can be missing or empty - in this case TargetPath used as name
 TargetName=
 
+; ShowInShell=
+; Controls if path will be shown in shell context menu
+; 1 - show, 0 - do not show
+; default (if not present) = 1
+ShowInShell=
+
+; ShowInGUI=
+; Controls if path will be shown in Converter's GUI
+; 1 - show, 0 - do not show
+; default (if not present) = 1
+ShowInGUI=
+
 [Target2]
 TargetPath=
 
